force-app/main/default/objects/Contact/fields/Is_Principal__c.field-meta.xml
<CustomField>
    <fullName>Is_Principal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Principal</label>
    <type>Checkbox</type>
</CustomField>