force-app/main/default/objects/Contact/fields/Methode_preferee_de_contact__c.field-meta.xml
<CustomField>
    <fullName>Methode_preferee_de_contact__c</fullName>
    <label>Méthode préférée de contact</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>M_thodes_pr_f_r_es_de_contact</valueSetName>
    </valueSet>
</CustomField>