force-app/main/default/objects/Contact/validationRules/Contact_VR_002_CIN_SansCaractereSpeciaux.validationRule-meta.xml
<ValidationRule>
    <fullName>Contact_VR_002_CIN_SansCaractereSpeciaux</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(ISBLANK(CIN__c)) &amp;&amp; NOT(REGEX( CIN__c,&quot;^[a-zA-Z0-9]*$&quot;))</errorConditionFormula>
    <errorDisplayField>CIN__c</errorDisplayField>
    <errorMessage>Merci de renseigner la CIN sans caractères spéciaux ni espaces.</errorMessage>
</ValidationRule>